force-app/main/default/objects/Test__c/fields/Apex_Classes__c.field-meta.xml
<CustomField>
    <fullName>Apex_Classes__c</fullName>
    <label>Apex Classes</label>
    <type>TextArea</type>
</CustomField>