force-app/main/default/objects/Test__c/fields/Coverage__c.field-meta.xml
<CustomField>
    <fullName>Coverage__c</fullName>
    <label>Coverage %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>