force-app/main/default/objects/Test__c/fields/Execute__c.field-meta.xml
<CustomField>
    <fullName>Execute__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/o/Test__c/list?filterName=00B1X000004gj4XUAQ&quot;, &quot;Execute&quot;, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Execute</label>
    <type>Text</type>
</CustomField>