force-app/main/default/objects/Test__c/fields/txl_Payload__c.field-meta.xml
<CustomField>
    <fullName>txl_Payload__c</fullName>
    <label>Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>