force-app/main/default/objects/Test__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Execute__c</columns>
    <columns>pkl_Status__c</columns>
    <columns>AcceptanceCriteria__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>